# raspi-flightcam

./: .gitignore  404.html  LICENCE  Pipfile  README.md  index.html  local.py  mkdocs.yml  setup.cfg  sitemap.xml
camera/: __init__.py  __main__.py  flight_camera.py
cli/: index.html
docs/: cli.md  develop.md  index.md  usage.md
docs/res/: flowchart.drawio
picam/: __init__.py  cli.py  recorder.py  utils.py
search/: search_index.json
test/: mov_2020.10.22-14.25.34.h264  test.py  test_camera_observed.py  test_time_parse.py
tests/: test_utils.py
