[metadata]
name = camera
version = 1.0
url = https://github.com/jjj999/nse2020/
author = Yunhyeon Jeong
author_email = jjj999to@gmail.com
description = Simple Flight Camera on Raspberry Pi.
long-description = file: README.md 

[options]
python_requires = >= 3.8
packages = find:
install_requires = 
    pigpio
    pisat @ https://github.com/jjj999/pisat.git
    picamera
