[metadata]
name = picam
version = attr:picam.__version__
url = https://github.com/FROM-THE-EARTH/picam
author = Yunhyeon Jeong
author_email = jjj999to@gmail.com
description = Utilities for Raspberry Pi camera.
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    picamera
    pigpio
    pisat

[options.entry_points]
console_scripts =
    picam = picam.cli:main
